[project]
name = "bitcoin-augur-benchmarking"
version = "0.1.0"
description = "A minimal Python tool to reproduce Bitcoin fee estimator benchmark results using exported CSV data"
readme = "README.md"
license = { file = "LICENSE.txt" }
authors = [
    { name = "Block, Inc." }
]
requires-python = ">=3.8"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "colorama>=0.4.6",
    "tabulate>=0.9.0",
]

[project.urls]
Homepage = "https://github.com/block/bitcoin-augur-benchmarking"
Repository = "https://github.com/block/bitcoin-augur-benchmarking"
Issues = "https://github.com/block/bitcoin-augur-benchmarking/issues"

[project.scripts]
bitcoin-backtest = "backtest:main"

[tool.setuptools]
py-modules = ["backtest"]

[tool.setuptools.packages.find]
where = ["."]
include = ["backtest*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]
